configmap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-configmaps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-configmaps
  template:
    metadata:
      labels:
        app: hello-world-configmaps
    spec:
      containers:
      - name: hello-world
        image: civo/docker-hello-world:latest
        ports:
        - containerPort: 8080
