ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: hello-world
  name: hello-world-ingress
spec:
  rules:
    - host: hello-world.aa50d065-2d50-42bf-8150-08060f577956.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: hello-world
                port:
                  number: 5000
            path: /
            pathType: "Prefix"
